# knowledge-acquisition

./: .clang-format  .github-readme-template.md  .gitignore  .gitmodules  Makefile  README.md  __HEADER_README  setup_environment.sh  sync_readme.py
.github/workflows/: sync-readme.yml  ui_setup_github_guide
document/kernel_lab/: systemcall.md
document/kernel_lab/x86_64/0_charactor_device/: Makefile  README.md  adv_chardev.c  singleton_open.patch
document/kernel_lab/x86_64/1_sysfs/: Makefile  README.md  dummy_module.c  note.md
document/preview/: command_helpful.md
linux/: CMakeLists.txt  README.md
linux/common/: CMakeLists.txt  std17pch.h
linux/common/helper/: CMakeLists.txt  fd_manager.h
linux/common/ipc/: CMakeLists.txt  ipc_crc_expr.h  ipc_metadata.h  ipc_msg_dispatcher.h  ipc_receiver.h  ipc_sender.h
linux/common/ipc/posix/pipe/: CMakeLists.txt  pipe_client.cpp  pipe_client.h  pipe_server.cpp  pipe_server.h  posix_pipe.cpp  posix_pipe.h
linux/common/ipc/posix/pipe/test/system/multi_process_tx_rx/client/: CMakeLists.txt  client.cpp
linux/common/ipc/posix/pipe/test/system/multi_process_tx_rx/server/: CMakeLists.txt  server.cpp
linux/common/ipc/posix/pipe/test/system/pipe_with_thread/: CMakeLists.txt  sandbox.cpp
linux/common/ipc/posix/pipe/test/system/split_client_server/server/: CMakeLists.txt  server.cpp
linux/common/ipc/posix/pipe/test/system/static_lib_with_thread/: CMakeLists.txt  sandbox.cpp
linux/common/ipc/posix/pipe/test/unit/: CMakeLists.txt  main_pipe_test.cpp
linux/common/ipc/posix/pipe/test/unit/PosixPipe/: CMakeLists.txt  sandbox.cpp
linux/common/ipc/posix/pipe/test/unit/base_pipe/: CMakeLists.txt
linux/common/ipc/posix/pipe/test/unit/client/: CMakeLists.txt  client.cpp
linux/common/ipc/posix/pipe/test/unit/server/: CMakeLists.txt  server.cpp
linux/common/ipc/sfd/: CMakeLists.txt  sfd_policy.h  sfd_policy_command.h  sfd_session_guard.h  sfd_static_registry.h  smart_file_descriptor.h
linux/common/ipc/sfd/test/: CMakeLists.txt  sandbox.cpp
linux/common/ipc/smart_file_descriptor/: sfd_policy.h  smart_file_descriptor.h
linux/common/ipc/smart_file_descriptor/test/: sandbox.cpp
linux/common/ipc/test/system/pipe_with_thread/: CMakeLists.txt  sandbox.cpp
linux/common/ipc/test/system/socket_with_process/client/: CMakeLists.txt
linux/common/ipc/test/unit/: send_and_read.cpp
linux/common/ipc/test/unit/ipc_communication/: CMakeLists.txt  sandbox.cpp
linux/common/ipc/test/unit/ipc_sandbox/: CMakeLists.txt  sandbox.cpp
linux/common/ipc/test/unit/pipe/: sandbox.cpp
linux/common/ipc/test/unit/pipe_with_process/: CMakeLists.txt  README.md
linux/common/ipc/test/unit/pipe_with_process/client/: CMakeLists.txt  client.cpp
linux/common/ipc/test/unit/pipe_with_process/server/: CMakeLists.txt  server.cpp
linux/common/ipc/test/unit/pipe_with_thread/: CMakeLists.txt  old_flow.md  sandbox.cpp
linux/common/ipc/test/unit/socket_with_process/client/: CMakeLists.txt  client.cpp
linux/common/ipc/test/unit/socket_with_process/server/: CMakeLists.txt  server.cpp
linux/common/ipc/universal_socket/: universal_socket.h
linux/common/ipc/universal_socket/test/unit/base_class/: CMakeLists.txt  sandbox.cpp
linux/common/ipc/unix/socket/: CMakeLists.txt  data_packet.h  note_book.md  socket_client.cpp  socket_client.h  socket_metadata.h  socket_server.cpp  socket_server.h  unix_socket.cpp  unix_socket.h
linux/common/ipc/unix/socket/test/system/socket_with_process/client/: CMakeLists.txt  client.cpp
linux/common/ipc/unix/socket/test/system/socket_with_process/server/: CMakeLists.txt  server.cpp
linux/common/ipc/unix/socket/test/unit/SocketAndClient/: CMakeLists.txt  sandbox.cpp
linux/common/ipc/unix/socket/test/unit/UnixSocket/: CMakeLists.txt  sandbox.cpp
linux/common/ipc/unix/socket/test/unit/base/: CMakeLists.txt  sandbox.cpp
linux/common/ipc_draft/: CMakeLists.txt
linux/common/ipc_draft/posix/pipe/: CMakeLists.txt  pipe_client.h  pipe_server.h  posix_pipe.h
linux/common/ipc_draft/test/system/socket_with_process/client/: client.cpp
linux/common/ipc_draft/test/system/socket_with_process/server/: CMakeLists.txt  server.cpp
linux/common/ipc_draft/test/unit/pipe_with_process/: README.md
linux/common/ipc_draft/test/unit/pipe_with_process/client/: CMakeLists.txt
linux/common/ipc_draft/test/unit/pipe_with_process/server/: CMakeLists.txt  server.cpp
linux/common/ipc_draft/test/unit/socket_with_process/: README.md
linux/common/ipc_draft/test/unit/socket_with_process/client/: CMakeLists.txt  client.cpp
linux/common/ipc_draft/test/unit/socket_with_process/server/: server.cpp
linux/common/ipc_draft/unix/socket/: CMakeLists.txt  socket_client.h  socket_server.cpp  unix_socket.h
linux/common/logging/: CMakeLists.txt  README.md  logger.cpp  logger.h  logging_config.json  native_logger.h
linux/common/logging/test/sample/: build_and_run.sh  logging_sample.cpp
linux/common/logging/test/sample/system/: build_and_run.sh  logger.cpp  logger.h  module_a.cpp  module_b.cpp
linux/common/logging/test/unit/: CMakeLists.txt.sample  build_and_run.sh  main.cpp  module_a.cpp  module_b.cpp
linux/common/logging/test/unit/native_logger/: CMakeLists.txt  sandbox.cpp
linux/common/util/: CMakeLists.txt  command_util.h  constexpr_util.h  runtime_util.h
linux/common/util/helper/nlohmann_json/: CMakeLists.txt  json_helper.cpp  json_helper.h
linux/common/util/helper/nlohmann_json/test/: CMakeLists.txt  sandbox.cpp
util/cli_helpful/docs/cmd/: default.md
util/cli_helpful/script/: setup_enviroment.sh
util/cmake/: FindParentDirectory.cmake  GTestSetup.cmake  InstallUtil.cmake  ProjectConfigInit.cmake  TestProjectInit.cmake
util/custom_terminal/: intro.sh
util/custom_terminal/line/: __help.md  custom_line_PS1.sh
util/fast_cli/: autocmake  install.sh  wizard_tool_configuration.txt
util/generate_wizard_complete/: README.md  build_and_internal_setup.sh  cli_tree.json  main.cpp
util/script_root/: lib.sh
util/service/heal_check/: check_power.sh
util/text_processing/: replace_grep_string.sh
(+32 files in other folders)
